--- a/C# - Optimizer/TrainScheduler/TrainScheduler.csproj
+++ b/C# - Optimizer/TrainScheduler/TrainScheduler.csproj
@@ -8,9 +8,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>TrainScheduler</RootNamespace>
     <AssemblyName>TrainScheduler</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>train_icon_62695_dDQ_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,27 +50,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Connection.cs" />
-    <Compile Include="Data\Duration.cs" />
-    <Compile Include="Data\ISerializable.cs" />
-    <Compile Include="Data\ProblemInstance.cs" />
-    <Compile Include="Data\Resource.cs" />
-    <Compile Include="Data\ResourceOccupation.cs" />
-    <Compile Include="Data\Route.cs" />
-    <Compile Include="Data\RoutePath.cs" />
-    <Compile Include="Data\RouteSection.cs" />
-    <Compile Include="Data\SectionRequirement.cs" />
-    <Compile Include="Data\Serializable.cs" />
-    <Compile Include="Data\ServiceIntention.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Data\EventNode.cs" />
+    <Compile Include="Data\Graph.cs" />
+    <Compile Include="Data\SectionEdge.cs" />
+    <Compile Include="InputOutputDataModel\Connection.cs" />
+    <Compile Include="InputOutputDataModel\Duration.cs" />
+    <Compile Include="InputOutputDataModel\ISerializable.cs" />
+    <Compile Include="InputOutputDataModel\ProblemInstance.cs" />
+    <Compile Include="InputOutputDataModel\Resource.cs" />
+    <Compile Include="InputOutputDataModel\ResourceOccupation.cs" />
+    <Compile Include="InputOutputDataModel\Route.cs" />
+    <Compile Include="InputOutputDataModel\RoutePath.cs" />
+    <Compile Include="InputOutputDataModel\RouteSection.cs" />
+    <Compile Include="InputOutputDataModel\SectionRequirement.cs" />
+    <Compile Include="InputOutputDataModel\Serializable.cs" />
+    <Compile Include="InputOutputDataModel\ServiceIntention.cs" />
+    <Compile Include="InputOutputDataModel\Solution.cs" />
+    <Compile Include="InputOutputDataModel\TrainRun.cs" />
+    <Compile Include="InputOutputDataModel\TrainRunSection.cs" />
+    <Compile Include="UI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="UI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainForm.resx">
+    <Compile Include="UI\ProblemSolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\ProblemSolutionView.Designer.cs">
+      <DependentUpon>ProblemSolutionView.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="UI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -77,7 +93,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\ProblemSolutionView.resx">
+      <DependentUpon>ProblemSolutionView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -87,6 +107,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Samples\01_dummy.json" />
+    <None Include="Samples\02_a_little_less_dummy.json" />
+    <None Include="Samples\03_FWA_0.125.json" />
+    <None Include="Samples\04_V1.02_FWA_without_obstruction.json" />
+    <None Include="Samples\05_V1.02_FWA_with_obstruction.json" />
+    <None Include="Samples\06_V1.20_FWA.json" />
+    <None Include="Samples\07_V1.22_FWA.json" />
+    <None Include="Samples\08_V1.30_FWA.json" />
+    <None Include="Samples\09_ZUE-ZG-CH_0600-1200.json" />
     <None Include="Samples\sample_scenario.json" />
     <None Include="Samples\sample_scenario_solution.json" />
     <None Include="Samples\sample_scenario_solution_delayed_arrival.json" />
@@ -97,8 +126,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Content Include="train_icon_62695_dDQ_icon.ico" />
+    <None Include="Resources\solution.png" />
+    <None Include="Resources\problem.png" />
+    <Content Include="Resources\train-icon-62695.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
