--- a/C# - Optimizer/TrainScheduler/TrainScheduler.csproj
+++ b/C# - Optimizer/TrainScheduler/TrainScheduler.csproj
@@ -36,6 +36,15 @@
     <ApplicationIcon>train_icon_62695_dDQ_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.1.1.1\lib\net40\Microsoft.Msagl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.Drawing, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.Drawing.1.1.1\lib\net40\Microsoft.Msagl.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.GraphViewerGdi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=fffc27ea4058b3a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.GraphViewerGDI.1.1.1\lib\net40\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -52,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Data\EventNode.cs" />
     <Compile Include="Data\Graph.cs" />
+    <Compile Include="Data\PossiblePath.cs" />
     <Compile Include="Data\SectionEdge.cs" />
     <Compile Include="InputOutputDataModel\Connection.cs" />
     <Compile Include="InputOutputDataModel\Duration.cs" />
@@ -68,6 +78,19 @@
     <Compile Include="InputOutputDataModel\Solution.cs" />
     <Compile Include="InputOutputDataModel\TrainRun.cs" />
     <Compile Include="InputOutputDataModel\TrainRunSection.cs" />
+    <Compile Include="UI\BaseView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\BaseView.Designer.cs">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Extensions.cs" />
+    <Compile Include="UI\LogView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\LogView.Designer.cs">
+      <DependentUpon>LogView.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,12 +99,30 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\ProblemSolutionView.cs">
+    <Compile Include="UI\ProblemView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\ProblemSolutionView.Designer.cs">
-      <DependentUpon>ProblemSolutionView.cs</DependentUpon>
+    <Compile Include="UI\ProblemView.Designer.cs">
+      <DependentUpon>ProblemView.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\SolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\SolutionView.Designer.cs">
+      <DependentUpon>SolutionView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\SolverView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\SolverView.Designer.cs">
+      <DependentUpon>SolverView.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="UI\BaseView.resx">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\LogView.resx">
+      <DependentUpon>LogView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,9 +136,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UI\ProblemSolutionView.resx">
-      <DependentUpon>ProblemSolutionView.cs</DependentUpon>
+    <EmbeddedResource Include="UI\ProblemView.resx">
+      <DependentUpon>ProblemView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\SolutionView.resx">
+      <DependentUpon>SolutionView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\SolverView.resx">
+      <DependentUpon>SolverView.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -126,7 +174,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Solver\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="train_icon_62695_dDQ_icon.ico" />
     <None Include="Resources\solution.png" />
