--- a/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
+++ b/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
@@ -41,17 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Input\Connection.cs" />
-    <Compile Include="Input\ProblemInstance.cs" />
-    <Compile Include="Input\Resource.cs" />
-    <Compile Include="Input\ResourceOccupation.cs" />
-    <Compile Include="Input\Route.cs" />
-    <Compile Include="Input\RoutePath.cs" />
-    <Compile Include="Input\RouteSection.cs" />
-    <Compile Include="Input\SectionRequirement.cs" />
-    <Compile Include="Input\ServiceIntention.cs" />
+    <Compile Include="SBB\Connection.cs" />
+    <Compile Include="SBB\ProblemInstance.cs" />
+    <Compile Include="SBB\Resource.cs" />
+    <Compile Include="SBB\ResourceOccupation.cs" />
+    <Compile Include="SBB\Route.cs" />
+    <Compile Include="SBB\RoutePath.cs" />
+    <Compile Include="SBB\RouteSection.cs" />
+    <Compile Include="SBB\SectionRequirement.cs" />
+    <Compile Include="SBB\ServiceIntention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SBB\Solution.cs" />
+    <Compile Include="SBB\TrainRun.cs" />
+    <Compile Include="SBB\TrainRunSection.cs" />
     <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Utils\Serializable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
