reconstruct old ui into new solution

--- a/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
+++ b/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
@@ -32,7 +32,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logging\Logging.cs" />
     <Compile Include="SBB\Connection.cs" />
     <Compile Include="SBB\ProblemInstance.cs" />
     <Compile Include="SBB\Resource.cs" />
