--- a/TSchedule2/TSchedule2.UI/TSchedule2.UI.csproj
+++ b/TSchedule2/TSchedule2.UI/TSchedule2.UI.csproj
@@ -83,6 +83,26 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\BaseView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\BaseView.Designer.cs" />
+    <Compile Include="Views\LogView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\LogView.Designer.cs" />
+    <Compile Include="Views\ProblemView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\ProblemView.Designer.cs" />
+    <Compile Include="Views\SolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\SolutionView.Designer.cs" />
+    <Compile Include="Views\SolverView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\SolverView.Designer.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +116,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\BaseView.resx" />
+    <EmbeddedResource Include="Views\LogView.resx" />
+    <EmbeddedResource Include="Views\ProblemView.resx" />
+    <EmbeddedResource Include="Views\SolutionView.resx" />
+    <EmbeddedResource Include="Views\SolverView.resx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -156,5 +181,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
