Recreate solution from scratch with new hierarchy and project organization

--- a/TSchedule2/TSchedule2.Solver/TSchedule2.Solver.csproj
+++ b/TSchedule2/TSchedule2.Solver/TSchedule2.Solver.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseSolver.cs" />
+    <Compile Include="DummySolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
