--- a/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
+++ b/TSchedule2/TSchedule2.Data/TSchedule2.Data.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.1.1.1\lib\net40\Microsoft.Msagl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.Drawing, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.Drawing.1.1.1\lib\net40\Microsoft.Msagl.Drawing.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -44,6 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logging\Logging.cs" />
+    <Compile Include="Model\Node.cs" />
+    <Compile Include="Model\PossiblePath.cs" />
+    <Compile Include="Model\Problem.cs" />
+    <Compile Include="Model\Resource.cs" />
+    <Compile Include="Model\Section.cs" />
+    <Compile Include="Model\Track.cs" />
+    <Compile Include="Model\Train.cs" />
     <Compile Include="SBB\Connection.cs" />
     <Compile Include="SBB\ProblemInstance.cs" />
     <Compile Include="SBB\Resource.cs" />
@@ -56,9 +69,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SBB\Solution.cs" />
     <Compile Include="SBB\TrainRun.cs" />
-    <Compile Include="SBB\TrainRunSection.cs" />
     <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Utils\Math.cs" />
     <Compile Include="Utils\Serializable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
