--- a/TSchedule2/TSchedule2.UI/TSchedule2.UI.csproj
+++ b/TSchedule2/TSchedule2.UI/TSchedule2.UI.csproj
@@ -50,7 +50,7 @@
     <StartupObject>TSchedule2.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>train.ico</ApplicationIcon>
+    <ApplicationIcon>train_icon_62695_dDQ_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
@@ -86,23 +86,33 @@
     <Compile Include="Views\BaseView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Views\BaseView.Designer.cs" />
+    <Compile Include="Views\BaseView.Designer.cs">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\LogView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Views\LogView.Designer.cs" />
+    <Compile Include="Views\LogView.Designer.cs">
+      <DependentUpon>LogView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ProblemView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Views\ProblemView.Designer.cs" />
+    <Compile Include="Views\ProblemView.Designer.cs">
+      <DependentUpon>ProblemView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SolutionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Views\SolutionView.Designer.cs" />
+    <Compile Include="Views\SolutionView.Designer.cs">
+      <DependentUpon>SolutionView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SolverView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Views\SolverView.Designer.cs" />
+    <Compile Include="Views\SolverView.Designer.cs">
+      <DependentUpon>SolverView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,11 +126,21 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Views\BaseView.resx" />
-    <EmbeddedResource Include="Views\LogView.resx" />
-    <EmbeddedResource Include="Views\ProblemView.resx" />
-    <EmbeddedResource Include="Views\SolutionView.resx" />
-    <EmbeddedResource Include="Views\SolverView.resx" />
+    <EmbeddedResource Include="Views\BaseView.resx">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\LogView.resx">
+      <DependentUpon>LogView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ProblemView.resx">
+      <DependentUpon>ProblemView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SolutionView.resx">
+      <DependentUpon>SolutionView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SolverView.resx">
+      <DependentUpon>SolverView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -168,6 +188,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="train.ico" />
+    <Content Include="train_icon_62695_dDQ_icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.1">
