--- a/TSchedule2/TSchedule2.Data/Data.csproj
+++ b/TSchedule2/TSchedule2.Data/Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1AC68513-36CE-4D53-B760-AD0C5C65CE2B}</ProjectGuid>
+    <ProjectGuid>{EE9DD371-7A06-419B-942B-4CF15897A42F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TSchedule2.Solver</RootNamespace>
-    <AssemblyName>TSchedule2.Solver</AssemblyName>
+    <RootNamespace>Data</RootNamespace>
+    <AssemblyName>Data</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.1.1.1\lib\net40\Microsoft.Msagl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.Drawing, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.Drawing.1.1.1\lib\net40\Microsoft.Msagl.Drawing.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,15 +49,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseSolver.cs" />
-    <Compile Include="DummySolver.cs" />
+    <Compile Include="Model\Node.cs" />
+    <Compile Include="Model\PossiblePath.cs" />
+    <Compile Include="Model\Problem.cs" />
+    <Compile Include="Model\Resource.cs" />
+    <Compile Include="Model\Section.cs" />
+    <Compile Include="Model\Track.cs" />
+    <Compile Include="Model\Train.cs" />
+    <Compile Include="SBB\Connection.cs" />
+    <Compile Include="SBB\ProblemInstance.cs" />
+    <Compile Include="SBB\Resource.cs" />
+    <Compile Include="SBB\ResourceOccupation.cs" />
+    <Compile Include="SBB\Route.cs" />
+    <Compile Include="SBB\RoutePath.cs" />
+    <Compile Include="SBB\RouteSection.cs" />
+    <Compile Include="SBB\SectionRequirement.cs" />
+    <Compile Include="SBB\ServiceIntention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SBB\Solution.cs" />
+    <Compile Include="SBB\TrainRun.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TSchedule2.Data\TSchedule2.Data.csproj">
-      <Project>{ee9dd371-7a06-419b-942b-4cf15897a42f}</Project>
-      <Name>TSchedule2.Data</Name>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{7868fd85-689e-4fd6-8406-df6dfcf83a0c}</Project>
+      <Name>Utils</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
